@@ -13,6 +13,7 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.Comparator;
+import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Set;
 import java.util.stream.Collectors;
@@ -74,12 +75,28 @@ public class RecommendationService {
             return recommendFoodGeneral(); // fallback
         }
 
-        return menuItemRepository.findAll().stream()
-                .filter(item -> item.getPopularity() != null)
+        Set<MenuItem> recommended = new LinkedHashSet<>();
+        Set<Long> favoriteIds = favorites.stream()
+                .map(f -> f.getMenuItem().getId())
+                .collect(Collectors.toSet());
+
+        for (Favorite favorite : favorites) {
+            MenuItem item = favorite.getMenuItem();
+            if (!Boolean.TRUE.equals(item.getHidden())) {
+                recommended.add(item);
+            }
+        }
+
+        List<MenuItem> others = menuItemRepository.findAll().stream()
                 .filter(item -> Boolean.FALSE.equals(item.getHidden()))
+                .filter(item -> !favoriteIds.contains(item.getId()))
                 .sorted(Comparator.comparingInt(MenuItem::getPopularity).reversed())
                 .limit(10)
-                .collect(Collectors.toList());
+                .toList();
+
+        recommended.addAll(others);
+
+        return recommended.stream().limit(10).toList();
     }
 
 
@@ -92,13 +109,29 @@ public class RecommendationService {
             return recommendFoodFromRestaurant(restaurantId); // fallback
         }
 
-        return menuItemRepository.findByRestaurantId(restaurantId)
-                .stream()
+        Set<MenuItem> recommended = new LinkedHashSet<>();
+        Set<Long> favoriteIds = favorites.stream()
+                .map(f -> f.getMenuItem().getId())
+                .collect(Collectors.toSet());
+
+        for (Favorite favorite : favorites) {
+            MenuItem item = favorite.getMenuItem();
+            if (item.getRestaurant().getId() == (restaurantId) && !Boolean.TRUE.equals(item.getHidden())) {
+                recommended.add(item);
+            }
+        }
+
+        List<MenuItem> others = menuItemRepository.findByRestaurantId(restaurantId).stream()
                 .filter(item -> item.getPopularity() != null)
                 .filter(item -> Boolean.FALSE.equals(item.getHidden()))
+                .filter(item -> !favoriteIds.contains(item.getId()))
                 .sorted(Comparator.comparingInt(MenuItem::getPopularity).reversed())
                 .limit(5)
-                .collect(Collectors.toList());
+                .toList();
+
+        recommended.addAll(others);
+
+        return recommended.stream().limit(5).toList();
     }
 
     public List<Restaurant> recommendRestaurantToUser(String username) {
@@ -110,9 +143,25 @@ public class RecommendationService {
             return recommendRestaurantGeneral();
         }
 
-        return restaurantRepository.findAll().stream()
+        Set<Restaurant> recommended = new LinkedHashSet<>();
+        Set<Long> favoriteRestaurantIds = favorites.stream()
+                .map(f -> f.getMenuItem().getRestaurant())
+                .map(Restaurant::getId)
+                .collect(Collectors.toSet());
+
+        for (Favorite favorite : favorites) {
+            Restaurant restaurant = favorite.getMenuItem().getRestaurant();
+            recommended.add(restaurant);
+        }
+
+        List<Restaurant> others = restaurantRepository.findAll().stream()
+                .filter(r -> !favoriteRestaurantIds.contains(r.getId()))
                 .sorted(Comparator.comparingDouble(Restaurant::getRating).reversed())
                 .limit(10)
-                .collect(Collectors.toList());
+                .toList();
+
+        recommended.addAll(others);
+
+        return recommended.stream().limit(10).toList();
     }
 }
